Fixed confirmation input bug on mobile

--- a/src/components/_topbar.scss
+++ b/src/components/_topbar.scss
@@ -5,12 +5,12 @@
     z-index: 9999;
     width: 100%;
     height: 140px;
-    background-color: #faf8f1;
+    background-color: #f1eddf;
     background-image: url("./img/bg.png");
 
     color: black;
     font-weight: 600;
-    opacity: 1;
+    opacity: 0.9;
     transition: opacity 0.5s;
 
     display: flex;
