--- a/src/components/mobile_menu.scss
+++ b/src/components/mobile_menu.scss
@@ -8,7 +8,6 @@
     z-index: 9998;
 }
 .mobile-nav {
-    margin-top: -110vh;
     transition: margin 0.5s;
 }
 .mobile-nav ul {
@@ -36,5 +35,5 @@
 }
 
 .slide {
-    margin-top: 30px !important;
+    margin-top: 60px !important;
 }
