--- a/src/sections/_confirmation.scss
+++ b/src/sections/_confirmation.scss
@@ -8,17 +8,17 @@
     height: 80px;
     text-align: center;
     font-size: 48px;
+    text-transform: uppercase;
 }
 button {
     background-color: rgba(white, 0.7);
     border: 2px solid lightgrey;
     color: grey;
     font-weight: bold;
-    margin: 5px;
+    margin: 2px 10px;
     padding: 10px;
     width: 150px;
     transition: all .2s ease-in-out;
-
 }
 button:hover {
     background-color: white;
@@ -29,10 +29,15 @@ button:focus, button:active, button:visited{
 }
 
 .guests-table tr {
+    min-width: 80vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    padding: 10px 0;
+}
+.guests-table tbody tr:nth-child(odd) {
+    background-color: rgba(255, 255, 255,0.4);
 }
 .guests-table th, .guests-table td {
     flex-grow: 1;
@@ -60,6 +65,11 @@ button:focus, button:active, button:visited{
     .guests-table th, .guests-table td {
         padding: 0 5px;
     }
+
+    .guests-table tbody tr {
+        // border-bottom: 1px solid black;
+    }
+    
     button {
         width: 90px;
         padding: 5px;
