--- a/src/sections/_home.scss
+++ b/src/sections/_home.scss
@@ -6,7 +6,7 @@
 }
 
 .down-arrow {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     font-size: 60px;
 }
 
@@ -26,6 +26,6 @@
     
     .down-arrow {
         justify-content: flex-start;
-        margin-left: 30px;
+        margin-bottom: 50px;
     }
 }
